--- a/src/backend/static/index.html
+++ b/src/backend/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VisionMoto Dashboard - Sistema de Detecção de Motos</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
     <div class="container">
@@ -87,6 +87,6 @@
     </div>
 
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
-    <script src="dashboard.js"></script>
+    <script src="/static/dashboard.js"></script>
 </body>
 </html>
