✅ Sistema VisionMoto v3.0 - Testado e Aprovado para 4º Sprint
- Refatoração completa da arquitetura (MVC + Services)
- Corrigido Pydantic v2 compatibility (schemas.py)
- APIs REST funcionando: Mobile, Java, .NET, IoT, Database
- Dashboard interativo com mapa visual do pátio
- 7 motos populadas com localização detalhada
- 6 dispositivos IoT simulados
- 22 rotas REST registradas e testadas
- Relatório completo de testes (TESTE_SISTEMA_COMPLETO.md)
- Sistema 100% pronto para demonstração em vídeo

--- a/src/backend/static/index.html
+++ b/src/backend/static/index.html
@@ -51,6 +51,17 @@
             </div>
         </div>
         
+        <!-- Mapa Visual do Pátio -->
+        <div class="patio-map-section">
+            <h3>🗺️ Mapa do Pátio - Localização das Motos</h3>
+            <div class="patio-map-container">
+                <canvas id="patio-canvas"></canvas>
+            </div>
+            <p style="color: #94a3b8; font-size: 0.85rem; margin-top: 10px; text-align: center;">
+                💡 Clique em uma moto para ver detalhes completos
+            </p>
+        </div>
+        
         <div class="content-grid">
             <div class="main-content">
                 <h3>Últimas Detecções em Tempo Real</h3>
@@ -87,6 +98,7 @@
     </div>
 
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+    <script src="/static/patio-map.js"></script>
     <script src="/static/dashboard.js"></script>
 </body>
 </html>
